syntax = "proto3";

message  AnnotationRequest{
  string white_img_path = 1;
  string black_img_path=2;
}

message AnnotationResponse {
  string job_id = 1;
  int32 percentage = 2;
  string white_img_path = 3;
  string black_img_path = 4;
  string status_message = 6;
  bool completed = 7;
  string error_message = 8;
  string process_type = 9;
  int32 status_code = 10;
}
